update to NB 25
- Set NB release 25
- Update all dependencies
- Migrate tests to JUnit 5
- Add Yenta class into code